# Watchtower

./: .gitmodules  LICENSE.md  MANIFEST.in  README.md  __init__.py  main.py  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  docs_report.yaml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: CD.yml  CI.yml
conf/: config.yaml  websites.yaml
docs/: CHANGELOG.md
docs/community/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  GLOSSARY.md  SUPPORT.md
lib/: chrome.py  code.py  communication.py  enqueue.py  html.py  image.py  load.py  parse_html.py  status.py
tests/: __init__.py  test_main.py
