# =============================================================================
# Watchtower
# =============================================================================
# SETUP.CFG
# -----------------------------------------------------------------------------
# Configuration file for Python's `setup.py` script.
#
# :Authors: Fabio Craig Wimmer Florey <fabioflorey@icloud.com>
# :Version: 0.0.1
# :License: MIT-0


[metadata]
name             = Watchtower
version          = 0.0.1
description      = Watchtower monitors changes on webpages
long_description = file: README.md
long_description_content_type = text/markdown
url              = https://github.com/FabioFlorey/
download_url     = https://github.com/FabioFlorey/
author           = Fabio Craig Wimmer Florey
author_email     = fabioflorey@icloud.com
maintainer       = Fabio Craig Wimmer Florey
maintainer_email = fabioflorey@icloud.com

license = MIT-0
license_files = LICENSE.md

keywords = 
    template
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: System :: Monitoring
    Topic :: Text Processing :: Markup :: HTML

include_package_data = True # Include MANIFEST.in files in the build

[options]
packages = find:

# py_modules = module

# install_requires =
#    module>=version

python_requires = >=3.9

# [options.entry_points]
# console_scripts =
#     project=module:main

# [options.packages.find]
# include = 
#     package
# exclude = 
#     package

# [options.package_data]
# 

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
parallel = true

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
